force-app/main/default/objects/TaskManagement__c/TaskManagement__c.object-meta.xml
<CustomObject>
    <description>Entidade para gerenciamento das tarefas. As tarefas dos fluxos deverão ser cadastradas nesse Objeto, e suas ações parametrizadas, para que o sistema identifique-as e processe as ações.</description>
    <label>Gerenciamento de tarefas</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Nome de Task Management</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gerenciamentos de tarefas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>