force-app/main/default/objects/TaskManagement__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Horário comercial</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Gerenciamentos_de_tarefas</relationshipName>
    <type>Lookup</type>
</CustomField>