force-app/main/default/objects/TaskManagement__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Fluxo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ForSale</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Key Logistics</fullName>
            </value>
            <value>
                <fullName>For sale</fullName>
                <isActive>false</isActive>
                <label>For sale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>