force-app/main/default/objects/TaskManagement__c/fields/FS_Flow__c.field-meta.xml
<CustomField>
    <fullName>FS_Flow__c</fullName>
    <label>ForSale Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stage</valueSetName>
    </valueSet>
</CustomField>