force-app/main/default/objects/TaskManagement__c/fields/FS_Subject__c.field-meta.xml
<CustomField>
    <fullName>FS_Subject__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>[BY] Realizar primeiro contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[BY] Formalizar o contato do onboarding por WhatsApp e registrar informações</fullName>
            </value>
            <value>
                <fullName>[BY] Enviar WhatsApp pedindo horário para realizar o onboarding</fullName>
            </value>
            <value>
                <fullName>[BY] Realizar segundo contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[BY] Realizar terceiro contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[BY] Enviar email formalizando o onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Realizar primeiro contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Formalizar o contato do onboarding por WhatsApp e registrar informações</fullName>
            </value>
            <value>
                <fullName>[SL] Enviar WhatsApp pedindo horário para realizar o onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Realizar segundo contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Realizar terceiro contato do onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Enviar email formalizando o onboarding</fullName>
            </value>
            <value>
                <fullName>[SL] Comunicar o que o restante da Corretagem é paga por ele no final do processo</fullName>
            </value>
            <value>
                <fullName>Conferir com BY se pagou o sinal</fullName>
                <label>[BY] Conferir com BY se ele pagou o sinal e solicitar comprovante</label>
            </value>
            <value>
                <fullName>Cobrar BY de pagamento do sinal</fullName>
                <label>[BY] Cobrar BY de pagamento do sinal</label>
            </value>
            <value>
                <fullName>Preencher Cognito para Finance</fullName>
                <label>Preencher formulário de TED para time Financeiro</label>
            </value>
            <value>
                <fullName>Informar para SL que BY pagou o sinal e que esse pagamento é do QuintoAndar</fullName>
            </value>
            <value>
                <fullName>[BY] Fazer contato para falar que DD está em andamento</fullName>
            </value>
            <value>
                <fullName>[SL] Fazer contato para falar que DD está em andamento</fullName>
            </value>
            <value>
                <fullName>[BY] Fazer contato para falar que DD ainda está em andamento</fullName>
            </value>
            <value>
                <fullName>[BY] Explicar sobre aceite tácito da DD</fullName>
            </value>
            <value>
                <fullName>[SL] Explicar sobre aceite tácito da DD</fullName>
            </value>
            <value>
                <fullName>Solicitar ajuda de LegalOps para esclarecer dúvidas</fullName>
            </value>
            <value>
                <fullName>Entender com LegalOps o motivo de ainda estar em andamento</fullName>
            </value>
            <value>
                <fullName>Entender com LegalOps o motivo do atraso</fullName>
            </value>
            <value>
                <fullName>[SL] Orientar sobre a entrega de chaves conforme CCV e perguntar se já tem uma data</fullName>
            </value>
            <value>
                <fullName>[BY] Comunicar BY sobre a entrega das chaves, confirmando data de previsão dada pelo SL</fullName>
            </value>
            <value>
                <fullName>[BY] Confirmar recebimento das chaves</fullName>
            </value>
            <value>
                <fullName>Orientar BY sobre o pagamento do saldo de acordo com CCV</fullName>
                <label>[BY] Orientar BY sobre o pagamento do saldo de acordo com CCV</label>
            </value>
            <value>
                <fullName>Atualizar SL sobre status do recebimento do Saldo de acordo com CCV</fullName>
                <label>[SL] Atualizar SL sobre status do recebimento do Saldo de acordo com CCV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>