force-app/main/default/objects/TaskManagement__c/fields/MandatoryAnswer__c.field-meta.xml
<CustomField>
    <fullName>MandatoryAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resposta obrigatória</label>
    <type>Checkbox</type>
</CustomField>