force-app/main/default/objects/TaskManagement__c/fields/TaskComplexity__c.field-meta.xml
<CustomField>
    <fullName>TaskComplexity__c</fullName>
    <label>Complexidade da Tarefa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaskComplexity</valueSetName>
    </valueSet>
</CustomField>