force-app/main/default/objects/TaskManagement__c/fields/TaskDescription__c.field-meta.xml
<CustomField>
    <fullName>TaskDescription__c</fullName>
    <label>Descrição da Tarefa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>