force-app/main/default/objects/TaskManagement__c/fields/TaskInstruction__c.field-meta.xml
<CustomField>
    <fullName>TaskInstruction__c</fullName>
    <label>Instrução da Tarefa</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>