force-app/main/default/objects/TaskManagement__c/fields/TaskStage__c.field-meta.xml
<CustomField>
    <fullName>TaskStage__c</fullName>
    <label>Etapas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaskStage</valueSetName>
    </valueSet>
</CustomField>